# aws-robomaker-sample-application-persondetection

./: .travis.yml
log_based_simulation_ws/src/: README.md
log_based_simulation_ws/src/person_detection_log_based_simulation/: CMakeLists.txt  package.xml
log_based_simulation_ws/src/person_detection_log_based_simulation/launch/: play_paused.launch  play_unpaused.launch  regression_test.launch  rosbag_play.launch
log_based_simulation_ws/src/person_detection_log_based_simulation/script/: regression_test.py
simulation_ws/: .rosinstall
simulation_ws/src/person_detection_simulation/: CMakeLists.txt
simulation_ws/src/person_detection_simulation/config/: kvs_config.yaml
simulation_ws/src/person_detection_simulation/launch/: kinesis.launch.py
